--- a/src/style.css
+++ b/src/style.css
@@ -3,30 +3,6 @@ body {
     font-family: inter, sans-serif;
 }
 
-.entity-prediction {
-    /* display: flex; */
-    font-family: -apple-system, BlinkMacSystemFont,inter, sans-serif;
-    /* color: red; */
-    /* font-weight: bold;
-    font-size: 20px; */
-
-    height: 100px;
-
-}
-
-.Something {
-    display: inline-block;
-    margin: 10px; 
-    padding: 20px;
-    width: 40%;
-    height: 100px;
-    border: 2px solid red;
-    border-radius: 5px;
-}
-
-
-
-
 .shadow {
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.1);
 }
@@ -37,6 +13,13 @@ body {
 
 .bold {
     font-weight:bold
+}
+
+.nav-title {
+    font-weight: bold;
+    text-decoration: None !important;
+    color: black;
+
 }
 
 .navbar {
@@ -50,16 +33,22 @@ body {
     height: 10vh;
 }
 
-.nav-items {
+.nav-items-list {
     list-style: none;
     display: flex;
 }
 
-.nav-items-options {
+.nav-items {
     padding: 0px 10px;
     font-weight: 700;
     color:black;
 }
+
+.nav-links {
+    text-decoration: none;
+    color: black;
+}
+
 
 .main-content {
     color: black;
@@ -93,20 +82,11 @@ section {
     align-items: center;
 }
 
-input, textarea {
-    margin-bottom: 15px;
-    height: 30px;
-    text-indent: 10px;
-    border: 1px solid #444;
-    border-radius: 5px;
-    display: block;
-}
+
 
 
 .ner-form{
-    display: flex;
-    /* justify-content: space-evenly; */
-    /* align-items: center; */
+    padding: 20px;
 }
 
 .ner-form-left {
@@ -119,66 +99,127 @@ input, textarea {
     justify-content: center;
     flex-direction: column;
 }
-#text {
+
+
+.ner-input-text {
     width: 100%;
-    height: 50px;
-    resize: none;
+    height: 20vh;
+    resize: vertical;
     font-family: inter, sans-serif;
     font-size: 16px;
+    border: 1px solid #444;
+    border-radius: 12px;
+    text-indent: 15px;
+    padding: 15px 0;
+    margin-bottom: 10px;
+
+    background-color: #f2f2f2;
+    -webkit-transition: all .5s ease-out;
+	-moz-transition: all .5s ease-out;
+	-ms-transition: all .5s ease-out;
+	-o-transition: all .5s ease-out;
+	transition: all .5s ease-out;
+    /* transition: 1s ease; */
+}
+
+.ner-input-text:focus {
+    background-color: lightblue;
+    /* background-color: #fff; */
+    box-shadow: 0 0 0 5px hsla(220, 100%, 50%, 30%);
+    outline: 2px solid blue;
+    
 }
 
 .submit-button {
-    /* background-color: black; */
-    margin-left:auto;
+    font-family: inter, sans-serif;
+    font-size: 14px;
+    display: block;
+    margin-left: auto;
+    border-radius: 12px;
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+    cursor: pointer;
+    width: 7%;
+    height: 6vh;
+    transition-duration: 0.5s;
 }
 
+.submit-button:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+  
 
-fieldset.group  { 
+
+.group  { 
     margin: 0; 
-    padding: 0; 
     margin-bottom: 1.25em; 
-    padding: .125em; 
+    padding: 1.25em 0; 
+    width: 50%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100px;
+    border-radius: 10px;
   } 
   
-fieldset.group legend { 
-    margin: 0; 
-    padding: 0; 
+.group legend { 
     font-weight: bold; 
     margin-left: 20px; 
-    font-size: 100%; 
+    font-size: 16px; 
     color: black; 
 } 
 
-
-ul.checkbox  { 
+.ner-checkboxes-list {
     margin: 0; 
     padding: 0; 
     margin-left: 20px;
     list-style: none; 
-} 
+}
 
 
 
-ul.checkbox li { 
+.ner-checkboxes-list li { 
     border: 1px transparent solid; 
     display: inline-block;
     align-items: center;
+    height: 3em;
     width:12em;
 } 
 
-ul.checkbox li:hover, 
-ul.checkbox li.focus  { 
+/* .ner-checkboxes-list li:hover { 
     background-color: lightyellow; 
     border: 1px gray solid; 
     width: 12em; 
-} 
-
-.options {
-    display:flex;
-    align-items: center;
-}
+}  */
 
 .options label {
-    margin-left: 5px;
-    margin-bottom: 13px;
+    margin-left: 8px;
 }
+
+.ner-prediction {
+    display: inline-block;
+    margin: 10px 20px ; 
+    padding: 20px 30px;
+    width: 40%;
+    max-height: 250px;
+    border: 2px solid gray;
+    border-radius: 12px;
+}
+
+.ner-prediction h2 {
+    /* color: blue; */
+    /* padding-bottom: 5px; */
+    margin-bottom: 5px !important;
+}
+
+.entities {
+    /* border: 2px solid black; */
+    /* height: 50px; */
+    padding: 5px;
+    background-color: #f2f2f2;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+}
+
